<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tistory.tikepjt.part2_3.Lab3_3Activity">

    <Button
        android:id="@+id/trueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/visible_true" />

    <TextView
        android:id="@+id/target_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:padding="16dp"
        android:text="@string/hello_world"
        android:textColor="#FFFFFF"
        android:visibility="invisible" />

    <Button
        android:id="@+id/falseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/visible_false" />
</LinearLayout>
